# PatchyDisc

./: CMakeLists.txt  README.md
UTILS/: patch.py
UTILS/particle_shapes/: 2mer.stl  3mer.stl  4mer.stl  5mer.stl  6mer.stl
examples/: input.json  input_mixture.json  input_one_component.json  input_single_component.json  last_conf.xyz  one_component.json
src/: Box.cpp  Box.h  CellList.cpp  GaussianPatchyDisc.cpp  GaussianPatchyDisc.h  GaussianPatchyDiscHR.cpp  GaussianPatchyDiscHR.h  GaussianPatchyDiscHRSW.cpp  GaussianPatchyDiscHRSW.h  Initialise.cpp  Initialise.h  InputOutput.cpp  InputOutput.h  KFOpenSurfPatchyDisc.cpp  KFOpenSurfPatchyDisc.h  Model.cpp  Model.h  Particle.cpp  Particle.h  PatchyDisc.cpp  PotentialsList.h  SingleParticleMove.cpp  SingleParticleMove.h  System.h  Top.cpp  Top.h  Utils.cpp  Utils.h  VMMC.cpp  VMMC.h  gaussian_patchy_disc.cpp  modifications  parse_input.cpp  parse_input.h
